# scrolltunes

./: .env.example  .gitignore  AGENTS.md  CURRENT_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V3.md  LICENSE  PROMPT_build.md  PROMPT_plan.md  README.md  TODO.md  biome.json  drizzle.config.ts  loop.sh  next.config.ts  package.json  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
docs/: album-type-scoring-proposal.md  architecture-review.md  architecture.md  audio-classification-design.md  bpm-analytics-admin.md  canonical-normalization.md  chords-integration-spec.md  design-review.md  design.md  edit-mode.md  effect-migration-checklist.md  lrc-enhancement-system.md  lrclib-enrichment-v2-spec.md  lrclib-enrichment-v3-spec.md  lrclib-extraction-technical-report.md  lyrics-display-design.md  musicxml-lyrics-extraction.md  search-optimization-plan.md  share-modal-editor.md  spotify-enrichment-plan.md  sqlite-extraction-optimizations.md  technical-reference.md  user-accounts-spec.md  ux-album-art-customization.md  ux-design-share-lyrics-designer.md  voice-search-design.md  voice-search-webspeech-google-stt-plan.md  voice-streaming-stt.md
lrc/: musicxml_lrc_cli.rs
public/: manifest.json  pcm-worklet.js  theme-init.js
scripts/: dev-https.js  extract_musicxml_lyrics.py  run-extraction.sh  search-local.ts  search-original.ts  set-admin.ts  test-enhance-lrc.ts  test-extract-chords.ts  test-scoring.ts  update-turso-token.sh
scripts/lrclib-extract/: Cargo.toml  ENRICHMENT_ANALYSIS.md  README.md
scripts/lrclib-extract/src/: analyze_failures.rs  lib.rs  main.rs  models.rs  normalize.rs  normalize_spotify.rs  progress.rs  safety.rs  scoring.rs
specs/: 001-rust-extraction-tool-enhancement.md  002-turso-schema-migration.md  003-search-api-turso-first.md  004-album-art-optimization.md  005-bpm-provider-refactor.md  006-documentation-cleanup.md  admin-add-to-catalog.md  admin-catalog-api.md  admin-catalog-hook.md  admin-songs-page-redesign.md  admin-track-search.md  bpm-admin-dashboard.md  bpm-admin-tracks-browser.md  bpm-analytics-schema.md  bpm-instrumentation.md  bpm-logging-helper.md  bpm-retention-cleanup.md  lrclib-enrichment-v2.md  score-book-display.md  spec-01-normalization-unification.md  spec-01-normalization.md  spec-02-query-optimization.md  spec-02-topk-candidates.md  spec-03-delayed-canonical.md  spec-03-multi-artist.md  spec-04-combined-scoring.md  spec-04-pop0-fallback.md  spec-05-adaptive-duration.md  spec-05-failure-logging.md  spec-06-title-rescue.md  spec-07-instrumentation.md  tui-redesign.md
src/: animations.ts  auth.ts  (+1 more)
(+480 files in other folders)
